SERVER-43978 Allow stable timestamp to advance after a transaction that reserved an oplog timestamp is aborted